[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Chrome Dino Sprites Corrigidos/sprite-sheet.png" type="Texture" id=3]
[ext_resource path="res://ParallaxBackground.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 20 )

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -2

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0834351
margin_right = 0.0834351
color = Color( 0.905882, 0.905882, 0.905882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1
script = ExtResource( 4 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 2400, 0 )

[node name="Ground" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 2, 104, 2400, 24 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 115, 328 )
collision_mask = 6

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 115, 395 )
collision_layer = 2
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="MarginContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -150.0
margin_top = 50.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HUD"]
margin_right = 150.0
margin_bottom = 14.0
custom_constants/separation = 10

[node name="HighScoreLabel" type="Label" parent="CanvasLayer/HUD/HBoxContainer"]
margin_right = 63.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "HI  00000"
align = 2

[node name="ScoreLabel" type="Label" parent="CanvasLayer/HUD/HBoxContainer"]
margin_left = 73.0
margin_right = 113.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "00000"
align = 2
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
